--- a/backend/package.json
+++ b/backend/package.json
@@ -22,10 +22,13 @@
     "mongoose": "^8.13.1",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9",
     "pdfkit": "^0.16.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "stripe": "^18.1.0"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
+    "nodemon": "^3.1.10"
   }
 }
