--- a/customer-frontend/package.json
+++ b/customer-frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
+    "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
